<resources>
    <string name="app_name">SWOP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>


    <string name="mainWishlist">All wishes appear here</string>
    <string name="myWishlist">User wishes appear here</string>
    <string name="title_activity_display_info">displayInfo</string>

    <!-- Strings used for fragments for navigation -->

    <string name="postWishItem">Post to Wish List</string>

    <string name="titleItemName">Item Name</string>
    <string name="titleDesc">Item Description</string>
    <string name="titleCategory">Category</string>

<!--    Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_wish">Go to wishes</string>
    <string name="menu_makewish">Make a wish</string>
    <string name="menu_items">Barter Items</string>
    <string name="menu_profile">My Profile</string>

    <!--    Tooltips-->
    <string name="toolHeart">Your wishes</string>
    <string name="toolPlus">Add a wish</string>
    <string name="toolOffer">Make an offer</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleteWishConfirm">Are you sure you want to delete this wish?</string>


    <string name="txtUname">User Name :</string>
    <string name="txtAddress">User\'s Address :</string>
    <string name="txtEmail">User\'s Email :</string>
    <string name="txtPhone">Phone :</string>
    <string name="txtPassword">Password :</string>
    <string name="topic">User Details</string>
    <string name="btnDel">Delete</string>
    <string name="btnUp">Update</string>
    <string name="txtSign">User Profile</string>
    <string name="txtName">User Name :</string>
    <string name="txtAdd">User\'s Address :</string>
    <string name="txtUEmail">User\'s Email :</string>
    <string name="txtUPhone">Phone :</string>
    <string name="txtUPass">Password :</string>
    <string name="butUp">UPDATE</string>
    <string name="butDel">DELETE</string>
    <string name="txtSignUp">"Sign Up Here "</string>
    <string name="txt1">User Details</string>
    <string name="txt2">User Name :</string>
    <string name="txt3">Address :</string>
    <string name="txt4">Email :</string>
    <string name="txt5">Phone :</string>
    <string name="btn1">SHOW</string>
    <string name="title_activity_home">Home</string>
    <string name="browse_items">Browse for items</string>
    <string name="menu_logout">Log Out</string>


</resources>