<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homepage"
            android:title="Home"/>


    </group>
<item
    android:title="Wish List">
    <menu>
        <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_wishList"
                android:title="@string/menu_wish"/>

            <item
                android:id="@+id/nav_newWish"
                android:title="@string/menu_makewish"/>

        </group>
    </menu>

</item>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_items"
            android:title="@string/menu_items"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"/>

    </group>

</menu>