<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/logoicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="100dp"
            android:src="@drawable/barter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/logoicon"
            android:text="SWOP"
            android:textSize="30dp"
            android:textColor="@color/title_color"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="177dp"
        android:text="@string/txt1"
        android:textColor="@color/title_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/txt2"
        android:textColor="@color/colorInput3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/EtInputName"
        android:layout_width="224dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/round_box"
        android:drawableLeft="@drawable/ic_person_outline_black_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#171414"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:text="@string/txt3"
        android:textColor="@color/colorInput3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/EtInputAddress"
        android:layout_width="225dp"
        android:layout_height="43dp"
        android:layout_marginStart="54dp"
        android:background="@drawable/round_box"
        android:ems="10"
        android:drawableLeft="@drawable/ic_baseline_home_24"
        android:inputType="textPostalAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="84dp"
        android:text="@string/txt4"
        android:textSize="18sp"
        android:textColor="@color/colorInput3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/EtInputEmail"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/round_box"
        android:ems="10"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/txt5"
        android:textSize="18sp"
        android:textColor="@color/colorInput3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/EtInputPhone"
        android:layout_width="225dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:background="@drawable/round_box"
        android:ems="10"
        android:inputType="phone"
        android:drawableLeft="@drawable/ic_baseline_contact_phone_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintStart_toEndOf="@+id/textView19" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn1"
        android:background="@color/colorInput2"
        android:textSize="18sp"
        android:textColor="@color/colorInput4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtInputPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>
